added function to HTML doc

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
        <input id="textBoxText" type="text" minlength="0" maxlength="250">
    </fieldset>
 
-   <button type="button" class="block" id="button">Submit</button>
+   <button type="button" class="block" onClick="countLetters()" id="button">Submit</button>
 
    <fieldset class = "mt-4">
      Letter count: <span id = "count"></span>
