--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    <button type="button" class="block" onClick="countLetters()" id="button">Submit</button>
 
    <fieldset class = "mt-4">
-     Letter count: <span id = "count"></span>
+     Available text spaces left: <span id = "count"></span>
    </fieldset>
 </body>
 
