forgot to added script tag because im a big dumby

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
    <fieldset class = "mt-4">
      Available text spaces left: <span id = "count"></span>
    </fieldset>
+
+   <script src="main.js"></script>
 </body>
 
 </html>
