tried to actually add style to the button

--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html lang="en">
 
 <head>
+<title>Module 4 App</title>
+<style>
+  .big {
+    background-color: "black";
+    width: 100%;
+  }
+</style>
 
 </head>
 
@@ -11,7 +18,7 @@
        <input id="textBoxText" type="text" minlength="0" maxlength="250">
    </fieldset>
 
-   <button type="button" class="block" onClick="countLetters()" id="button">Submit</button>
+   <button type="button" class="big" onClick="countLetters()" id="button">Submit</button>
 
    <fieldset class = "mt-4">
      Available text spaces left: <span id = "count"></span>
