--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Module 4 App</title>
 <style>
   .big {
-    background-color: "black";
+    background-color: black;
     width: 100%;
   }
 </style>
